--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -25,6 +25,7 @@
             </a>
             <ul id="reports" class="collapse">
                 <li><a href="@Url.Action("ResumenPlanilla", "Reportes")"><i class="fa fa-table"></i> Resumen totales por trabajador</a></li>
+                <li><a href="@Url.Action("DetallesPlanillas", "Reportes")"><i class="fa fa-table"></i> Detalles de planillas</a></li>
                 <li><a href="@Url.Action("ResumenActividadYDependencia", "Reportes")"><i class="fa bi-building"></i> Resumen por dependencia</a></li>
                 <li><a href="@Url.Action("ResumenSIAF", "Reportes")"><i class="fa fa-table"></i> Resumen SIAF</a></li>
             </ul>
