--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/_DetallePlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/_DetallePlanilla.cshtml
@@ -33,7 +33,7 @@
 
         <dl class="row">
             <dt class="col-sm-3">Planilla</dt>
-            <dd class="col-sm-9">@Html.DropDownList("cmbCategorias", ViewBag.ListaCategorias as SelectList, new { @class = "form-control uppercase" })</dd>
+            <dd class="col-sm-9">@Html.DropDownList("cmbCategorias", ViewBag.ListaCategorias as SelectList, new { @class = "form-control text-uppercase" })</dd>
 
             <dt class="col-sm-3">Tipo planilla</dt>
             <dd class="col-sm-9">@planilla.tipoPlanillaDesc</dd>
@@ -57,34 +57,30 @@
     </div>
     <div class="container-fluid" id="content-body">
         <div class="table-responsive mb-4">
-            <table class="table table-hover" id="dataTableConceptosAsignados" width="100%">
+            <table class="table table-sm table-hover" id="dataTableConceptosAsignados" width="100%">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Tip.Concepto</th>
-                        <th>Código</th>
-                        <th>Descripción</th>
-                        <th>Monto</th>
+                        <th class="text-center" colspan="2">RUBROS</th>
+                        <th class="text-center">IMPORTES</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in conceptos)
+                    @foreach (var tipoConcepto in conceptos.GroupBy(x => new { x.tipoConceptoID, x.tipoConceptoDesc }))
                     {
                         <tr>
-                            <td>@item.tipoConceptoDesc</td>
-                            <td>@item.conceptoCod</td>
-                            <td>@item.conceptoDesc</td>
-                            <td>@item.montoFormateado</td>
+                            <th colspan="2">TOTAL @tipoConcepto.Key.tipoConceptoDesc</th>
+                            <th class="text-right">@planilla.ObtenerTotal((Domain.Enums.TipoConcepto)tipoConcepto.Key.tipoConceptoID)</th>
                         </tr>
+                        foreach (var concepto in tipoConcepto)
+                        {
+                            <tr>
+                                <td>@concepto.conceptoCod</td>
+                                <td>@concepto.conceptoDesc</td>
+                                <td class="text-right">@concepto.montoFormateado</td>
+                            </tr>
+                        }
                     }
                 </tbody>
-                <tfoot>
-                    <tr>
-                        <th>Tip.Concepto</th>
-                        <th>Código</th>
-                        <th>Descripción</th>
-                        <th>Monto</th>
-                    </tr>
-                </tfoot>
             </table>
         </div>
     </div>
@@ -93,199 +89,41 @@
 <script type="text/javascript">
     modalActivo = null;
 
-    //generarDatatableConceptosAsignados();
-
-    $('.modal-body').on('click', '#btn-agregar', function (event) {
-        event.preventDefault();
-        var url = $(event.currentTarget).attr('href');
-        loadForm(url, 'obteniendo formulario...')
-    });
-
-    $('.modal-body').on('click', '.btn-editar', function (event) {
-        event.preventDefault();
-        var url = $(event.currentTarget).attr('href');
-        loadForm(url, 'obteniendo datos del concepto...');
-    });
-
-    $('.modal-body').on('click', '.btn-eliminar', function (event) {
+    $('.modal-body').on('change', '#cmbCategorias', function (event) {
         event.preventDefault();
 
-        let id = $(this).data("id");
-        let token = $('input[name="__RequestVerificationToken"]').val();
+        let parametros = {
+            trabajadorID: @Model.trabajadorID,
+            trabajadorPlanillaID: this.value,
+            anio: @planilla.año,
+            mes: @planilla.mes
+        };
 
-        Swal.fire({
-            title: '',
-            text: '¿Desea eliminar este registro?',
-            icon: MENSAJE.WARNING,
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Si, continuar.',
-            cancelButtonText: 'No, cancelar.'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                $.ajax({
-                    url: '@Url.Action("Eliminar", "PlantillaPlanillaConcepto")/' + id,
-                    type: "POST",
-                    data: { __RequestVerificationToken: token },
-                    beforeSend: function () {
-                        $('#content-body').hide();
-                        $('#spin-loader').show();
-                    },
-                    success: function (data) {
-                        $('#content-body').show();
-                        $('#spin-loader').hide();
+         $.ajax({
+             url: '@Url.Action("ObtenerInformacionCategoriaPlanillaGenerada", "Reportes")',
+             type: "GET",
+             data: parametros,
+             beforeSend: function () {
+                 //$('#content-body').hide();
+                 //$('#spin-loader').show();
+             },
+             success: function (data) {
+                 console.log(data);
+                 //$('#content-body').show();
+                 //$('#spin-loader').hide();
 
-                        if (data.Success) {
-                            mostrarMensajeSistema(data.Message, MENSAJE.SUCCESS);
-                            generarDatatableConceptosAsignados();
-                        } else {
-                            mostrarMensajeSistema(data.Message, MENSAJE.ERROR);
-                        }
-                    },
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        $('#content-body').html('<p class="alert alert-danger">' + jqXHR.responseText + '</p>');
-                        $('#spin-loader').hide();
-                        $('#content-body').show();
-                    }
-                });
-            }
-        });
+                 //if (data.Success) {
+                 //    mostrarMensajeSistema(data.Message, MENSAJE.SUCCESS);
+                 //    generarDatatableConceptosAsignados();
+                 //} else {
+                 //    mostrarMensajeSistema(data.Message, MENSAJE.ERROR);
+                 //}
+             },
+             error: function (jqXHR, textStatus, errorThrown) {
+                 //$('#content-body').html('<p class="alert alert-danger">' + jqXHR.responseText + '</p>');
+                 //$('#spin-loader').hide();
+                 //$('#content-body').show();
+             }
+         });
     });
-
-    function generarDatatableConceptosAsignados() {
-        $('#dataTableConceptosAsignados').DataTable({
-            ajax: {
-                'url': '@Url.Action("ObtenerConceptosAsignados", "PlantillaPlanillaConcepto")',
-                'type': 'get'
-            },
-            columns: [
-                { data: 'tipoConceptoDesc' },
-                { data: 'conceptoCod' },
-                { data: 'conceptoDesc' },
-                { data: 'valorConceptoFormateado' },
-                { data: 'descFiltro' },
-                { data: 'estaHabilitado' },
-                { data: 'plantillaPlanillaConceptoID' },
-                { data: 'plantillaPlanillaConceptoID' }
-            ],
-            columnDefs: [
-                {
-                    targets: -3,
-                    orderable: false,
-                    render: function (data, type, row) {
-                        let btnClass = (row.estaHabilitado === true) ? 'success' : 'secondary';
-                        let iClass = (row.estaHabilitado === true) ? 'check-circle-o' : 'minus-circle';
-                        let estado = (row.estaHabilitado === true) ? 'Habilitado' : 'Deshabilitado';
-
-                        let url = '@Url.Action("CambiarEstado", "PlantillaPlanillaConcepto")';
-                        let token = $('input[name="__RequestVerificationToken"]').val();
-                        let container = 'dataTableConceptosAsignados';
-
-                        let onClickFunction = `ChangeState(${row.plantillaPlanillaConceptoID}, ${row.estaHabilitado}, '${url}', '${token}', '${container}')`;
-
-                        let html = `<span id="td${row.plantillaPlanillaConceptoID}">` +
-                            `<button type="submit" class="btn btn-xs btn-${btnClass}" onclick="${onClickFunction}">` +
-                            `<i class="fa fa-${iClass}" aria-hidden="true"></i> <span class="d-none d-md-inline-block">${estado}</span>` +
-                            '</button>' +
-                            '</span>';
-
-                        return html;
-                    }
-                },
-                {
-                    targets: -2,
-                    orderable: false,
-                    render: function (data, type, row) {
-                        return `<a class="btn-editar" href="@Url.Action("Editar", "PlantillaPlanillaConcepto")/${data}` +
-                            '" title="Editar"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>';
-                    }
-                },
-                {
-                    targets: -1,
-                    orderable: false,
-                    render: function (data, type, row) {
-                        return `<a class="btn-eliminar" href="#" data-id="${data}"` +
-                            '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i></a>';
-                    }
-                }
-            ],
-            bStateSave: true,
-            bDestroy: true,
-            lengthMenu: [[5, 10], [5, 10, "Todos"]],
-            iDisplayLength: 5,
-            language: {
-                search: "Buscar: ",
-                lengthMenu: "Mostrar _MENU_ filas",
-                info: "Mostrando del _START_ al _END_ de _TOTAL_ elementos.",
-                infoEmpty: "No se encontraron registros.",
-                zeroRecords: "No hay data disponible.",
-                emptyTable: "No hay data disponible.",
-                paginate: {
-                    first: "Primero",
-                    previous: "Previo",
-                    next: "Siguiente",
-                    last: "Último"
-                },
-                aria: {
-                    sortAscending: ": activar para ordenar la columna en orden ascendente",
-                    sortDescending: ": activar para ordenar la columna en orden descendente"
-                },
-                loadingRecords: "Cargando...",
-                processing: "Procesando..."
-            },
-            searching: true,
-            initComplete: function () {
-                this.api().columns([0]).every(function () {
-                    let column = this;
-
-                    let select = document.createElement('select');
-                    select.add(new Option('Tip.Concepto', ''));
-                    column.footer().replaceChildren(select);
-
-                    select.addEventListener('change', function () {
-                        var val = $.fn.dataTable.util.escapeRegex(select.value);
-                        column.search(val ? '^' + val + '$' : '', true, false).draw();
-                    });
-
-                    column.data().unique().sort().each(function (d, j) {
-                        if (column.search() === '^' + d + '$') {
-                            select.add(new Option(d, d, true, true));
-                        } else {
-                            select.add(new Option(d, d));
-                        }
-                    });
-
-                    $(select).click(function (e) {
-                        e.stopPropagation();
-                    });
-                });
-            }
-        });
-    }
-
-    function loadForm(url, message) {
-        $('#load-message').html(message);
-
-        $.ajax({
-            url: url,
-            type: "GET",
-            beforeSend: function () {
-                $('#content-body').hide();
-                $('#spin-loader').show();
-            },
-            success: function (data) {
-                $('#content-body').html(data);
-                setTimeout(function () {
-                    $('#spin-loader').hide();
-                    $('#content-body').show();
-                }, 300);
-            },
-            error: function (jqXHR, textStatus, errorThrown) {
-                $('#content-body').html('<p class="alert alert-danger">' + jqXHR.responseText + '</p>');
-                $('#spin-loader').hide();
-                $('#content-body').show();
-            }
-        })
-    }
 </script>
