Finalizado reporte de detalle de conceptos de planilla por trabajador.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/_DetallePlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/_DetallePlanilla.cshtml
@@ -14,6 +14,9 @@
     <div class="container-fluid mb-4">
         <dl class="row">
             <dt class="col-sm-3">Código de trabajador</dt>
+            <dd class="col-sm-9">@Model.trabajadorCod</dd>
+
+            <dt class="col-sm-3">Nombres completos</dt>
             <dd class="col-sm-9">@Model.apellidosNombre</dd>
 
             <dt class="col-sm-3">Tip. doc. identidad</dt>
