Actualización de íconos.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -24,10 +24,10 @@
                 <i class="fa fa-fw fa-bar-chart"></i> Reportes<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="reports" class="collapse">
-                <li><a href="@Url.Action("ResumenPlanilla", "Reportes")"><i class="fa fa-table"></i> Resumen totales por trabajador</a></li>
-                <li><a href="@Url.Action("DetallesPlanillas", "Reportes")"><i class="fa fa-table"></i> Detalles de planillas</a></li>
+                <li><a href="@Url.Action("ResumenPlanilla", "Reportes")"><i class="fa fa-table"></i> Resumen general</a></li>
+                <li><a href="@Url.Action("DetallesPlanillas", "Reportes")"><i class="fa fa-list-alt"></i> Detalles de planillas</a></li>
                 <li><a href="@Url.Action("ResumenActividadYDependencia", "Reportes")"><i class="fa bi-building"></i> Resumen por dependencia</a></li>
-                <li><a href="@Url.Action("ResumenSIAF", "Reportes")"><i class="fa fa-table"></i> Resumen SIAF</a></li>
+                <li><a href="@Url.Action("ResumenSIAF", "Reportes")"><i class="fa bi-ui-checks"></i> Resumen SIAF</a></li>
             </ul>
         </li>
         <li class="nav-item">
