--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/DetallesPlanillas.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/DetallesPlanillas.cshtml
@@ -7,7 +7,7 @@
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home">&nbsp;</i>Inicio</a></li>
                     <li class="breadcrumb-item"><span><i class="fa fa-bar-chart">&nbsp;</i>Reportes </span></li>
-                    <li class="breadcrumb-item active"><span><i class="fa fa-table">&nbsp;</i>@ViewBag.Title </span></li>
+                    <li class="breadcrumb-item active"><span><i class="fa fa-list-alt">&nbsp;</i>@ViewBag.Title </span></li>
                 </ol>
             </nav>
             <h1 class="">@ViewBag.Title <small></small></h1>
@@ -148,7 +148,7 @@
                         className: 'text-center',
                         render: function (data, type, row) {
                             return `<a class="modal-link-lg" href="@Url.Action("DetallePlanilla", "Reportes")?trabajadorID=${row.trabajadorID}&anio=${row.año}&mes=${row.mes}` +
-                                '" title="Ver planillas"><i class="fa bi-ui-checks" aria-hidden="true"></i></a>';
+                                '" title="Ver planillas"><i class="fa fa-list-alt" aria-hidden="true"></i></a>';
                         }
                     }
                 ],
