--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenSIAF.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenSIAF.cshtml
@@ -7,7 +7,7 @@
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home">&nbsp;</i>Inicio</a></li>
                     <li class="breadcrumb-item"><span><i class="fa fa-bar-chart">&nbsp;</i>Reportes </span></li>
-                    <li class="breadcrumb-item active"><span><i class="fa fa-table">&nbsp;</i>@ViewBag.Title </span></li>
+                    <li class="breadcrumb-item active"><span><i class="fa bi-ui-checks">&nbsp;</i>@ViewBag.Title </span></li>
                 </ol>
             </nav>
             <h1 class="">@ViewBag.Title <small></small></h1>
