Avance asignación de cargo.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Generar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Generar.cshtml
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="table-responsive mt-4">
-                    <p class="h5">Relación de estudiantes registrados en el sistema</p>
+                    <p class="h5">Relación de trabajadores registrados en el sistema</p>
                     
                     <div id="divBtnGenerar" class="form-group col-lg-2 col-4 pl-0" style="display: none;">
                         <button type="button" id="btnGenerar" class="btn btn-block btn-outline-primary"><i class="fa fa-fw fa-cogs"></i> Generar Planilla</button>
