--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_AsignarCategoriaPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_AsignarCategoriaPlanilla.cshtml
@@ -78,16 +78,14 @@
 
         $('#content-body #grupoTrabajoID').select2({
             theme: 'bootstrap4',
-            dropdownParent: $('#modal-container-lg'),
-            placeholder: "[ SELECCIONAR ]"
+            dropdownParent: $('#modal-container-lg')
         }).on('hide', function (e) {
             e.stopPropagation();
         });
 
         $('#content-body #dependenciaID').select2({
             theme: 'bootstrap4',
-            dropdownParent: $('#modal-container-lg'),
-            placeholder: "[ SELECCIONAR ]"
+            dropdownParent: $('#modal-container-lg')
         }).on('hide', function (e) {
             e.stopPropagation();
         });
