--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_CategoriasPlanillaAsignadas.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_CategoriasPlanillaAsignadas.cshtml
@@ -40,6 +40,7 @@
                     <tr>
                         <th>Planilla</th>
                         <th>Dependencia</th>
+                        <th>Es Cargo</th>
                         <th>Grupo</th>
                         <th>Estado</th>
                         <th></th>
@@ -50,6 +51,7 @@
                     <tr>
                         <th>Planilla</th>
                         <th>Dependencia</th>
+                        <th>Es cargo</th>
                         <th>Grupo</th>
                         <th>Estado</th>
                         <th></th>
@@ -139,6 +141,7 @@
             columns: [
                 { data: 'esCategoriaPrincipal' },
                 { data: 'dependenciaDesc' },
+                { data: 'esJefe' },
                 { data: 'grupoTrabajoDesc' },
                 { data: 'trabajadorCategoriaPlanillaID' },
                 { data: 'trabajadorCategoriaPlanillaID' },
@@ -149,6 +152,12 @@
                     targets: 0,
                     render: function (data, type, row) {
                         return data ? row.categoriaPlanillaDesc + '<br/><b>(Planilla Principal)<b/>' : row.categoriaPlanillaDesc;
+                    }
+                },
+                {
+                    targets: 2,
+                    render: function (data, type, row) {
+                        return data ? 'Sí' : 'No';
                     }
                 },
                 {
