--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -90,6 +90,7 @@
                 columnDefs: [
                     {
                         targets: -2,
+                        className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
                             return `<a class="modal-link-lg" href="@Url.Action("Editar", "Trabajadores")/${data}` +
@@ -98,9 +99,10 @@
                     },
                     {
                         targets: -1,
+                        className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
-                            return `<a class="modal-link-lg" href="@Url.Action("CategoriasPlanillaAsignadas", "Trabajadores")/${data}` +
+                            return `<a class="modal-link-xl" href="@Url.Action("CategoriasPlanillaAsignadas", "Trabajadores")/${data}` +
                                 '" title="Agregar a otra planilla"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>';
                         }
                     }
